--- a/microsite/mockup/index.html
+++ b/microsite/mockup/index.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 	<title>Succulent Mockup</title>
+	<style type="text/css">
+
+		body img {
+			height: 33%;
+		}
+
+	</style>
 </head>
 <body>
 
